--- a/src/Vts.Gui.Silverlight/View/Application/Panels/FluenceSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/FluenceSolverView.xaml
@@ -44,6 +44,12 @@
             <TextBox Width="40" Margin="3" Text="{Binding SourceDetectorSeparation, Mode=TwoWay}" VerticalAlignment="Center"/>
             <TextBlock Text="{Binding Path=MainResource.Measurement_mm, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center"/>
         </StackPanel>
+        <!-- Modulation Frequency -->
+        <StackPanel Orientation="Horizontal" Visibility="{Binding IsTimeFrequencyDomain, Converter={StaticResource myBooleanToVisibilityConverter}}" Margin="5">
+            <TextBlock Text="{Binding Path=MainResource.Label_ModulationFrequency, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center"/>
+            <TextBox Width="40" Margin="3" Text="{Binding TimeModulationFrequency, Mode=TwoWay}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding Path=MainResource.Measurement_GHz, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center"/>
+        </StackPanel>
         <!-- Rho Range -->
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="{Binding Path=MainResource.Label_RhoRange, Source={StaticResource LocalizedStrings}}" Margin="5,0,5,0" VerticalAlignment="Center"/>
