--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/AbsorbedEnergySolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/AbsorbedEnergySolutionDomainOptionView.xaml
@@ -34,40 +34,40 @@
                         Grid.Row="0" Grid.Column="1"
                         DataContext="{Binding FluenceOfRhoAndZOption}"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfRhoAndZ, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                     <RadioButton 
                         Grid.Row="0" Grid.Column="2"
                         DataContext="{Binding FluenceOfFxAndZOption}" IsEnabled="False"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfFxAndZ, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                     <!-- TIME-DOMAIN -->
                     <TextBlock 
                         Grid.Row="1" Grid.Column="0" 
                         Text="Time-Domain"  Margin="2,2"/>
                     <RadioButton 
                         Grid.Row="1" Grid.Column="1" IsEnabled="False"
-                        DataContext="{Binding FluenceOfRhoAndTOption}"
+                        DataContext="{Binding FluenceOfRhoAndZAndTOption}"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfRhoAndZAndTime, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                     <RadioButton 
                         Grid.Row="1" Grid.Column="2" IsEnabled="False"
-                        DataContext="{Binding FluenceOfFxAndTOption}"
+                        DataContext="{Binding FluenceOfFxAndZAndTOption}"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfFxAndZAndTime, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                     <!-- FREQUENCY-DOMAIN -->
                     <TextBlock 
                         Grid.Row="2" Grid.Column="0" 
                         Text="Frequency-Domain"  Margin="2,2"/>
                     <RadioButton 
                         Grid.Row="2" Grid.Column="1"
-                        DataContext="{Binding FluenceOfRhoAndFtOption}" IsEnabled="False"
+                        DataContext="{Binding FluenceOfRhoAndZAndFtOption}" IsEnabled="True"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfRhoAndZAndFt, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                     <RadioButton 
                         Grid.Row="2" Grid.Column="2"
-                        DataContext="{Binding FluenceOfFxAndFtOption}" IsEnabled="False"
+                        DataContext="{Binding FluenceOfFxAndZAndFtOption}" IsEnabled="False"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_AOfFxAndZAndFt, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
-                        GroupName="{Binding GroupName}" Margin="2,3.5"/>
+                        GroupName="AbsorbedEnergySolutionDomainOptionView" Margin="2,3.5"/>
                 </Grid>
             </controls:HeaderedContentControl.Content>
         </controls:HeaderedContentControl>
