Prototyped View/ViewModel for multi-region (e.g. two-layer) forward solvers
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
@@ -28,8 +28,15 @@
         <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <!-- Detection Parameters -->
         <v:RangeView DataContext="{Binding RangeVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <!-- Optical Properties -->
-        <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <!-- Optical Properties (single- or multi-region property editor shown, depending on forward model type -->
+        
+        <StackPanel Visibility="{Binding IsSemiInfinite, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding TissueInputVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        </StackPanel>
+        <StackPanel Visibility="{Binding IsMultiRegion, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:MultiRegionOpticalPropertyView DataContext="{Binding TissueInputVM}" HorizontalAlignment="Left" VerticalAlignment="Top"  />
+        </StackPanel>
+        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
