--- a/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
@@ -8,38 +8,35 @@
         <!-- Solver Engine -->
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="72"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Path=MainResource.Label_ForwardSolver, Source={StaticResource LocalizedStrings }}" FontSize="12" FontWeight="Bold" Margin="3,3" />
-            <v:ComboBoxOptionView Grid.Row="1" Grid.Column="1"  DataContext="{Binding ForwardSolverTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <TextBlock Grid.Column="0" Text="{Binding Path=MainResource.Label_ForwardSolver, Source={StaticResource LocalizedStrings }}" FontWeight="Bold" Width="75" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <v:ComboBoxOptionView Grid.Column="1" DataContext="{Binding ForwardSolverTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,0,0,0"/>
         </Grid>
         <!-- Gaussian Beam Diameter -->
-        <StackPanel Orientation="Horizontal" Visibility="{Binding IsGaussianForwardModel, Converter={StaticResource myBooleanToVisibilityConverter}}" Margin="5">
-            <TextBlock Text="{Binding Path=MainResource.Label_GaussianBeam, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center"/>
-            <TextBox Width="40" Margin="3" Text="{Binding ForwardSolver.BeamDiameter, Mode=TwoWay}" VerticalAlignment="Bottom"/>
-            <TextBlock Text="{Binding Path=MainResource.Measurement_mm, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Horizontal" Visibility="{Binding IsGaussianForwardModel, Converter={StaticResource myBooleanToVisibilityConverter}}" Margin="0,3,0,0">
+            <TextBlock Text="{Binding Path=MainResource.Label_GaussianBeam, Source={StaticResource LocalizedStrings}}" Margin="3,0,0,0" VerticalAlignment="Center"/>
+            <TextBox Width="40" Text="{Binding ForwardSolver.BeamDiameter, Mode=TwoWay}" VerticalAlignment="Bottom" Margin="3,0,0,0"/>
+            <TextBlock Text="{Binding Path=MainResource.Measurement_mm, Source={StaticResource LocalizedStrings}}" Margin="2,0,0,0" VerticalAlignment="Center"/>
         </StackPanel>
         <!-- Solution Domain -->
-        <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         <!-- Detection Parameters -->
-        <v:RangeView DataContext="{Binding RangeVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <StackPanel Visibility="{Binding ShowIndependentVariable, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:RangeView DataContext="{Binding RangeVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
+        </StackPanel>
         <!-- Optical Properties -->
-        <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Grid>
+        <StackPanel Visibility="{Binding ShowOpticalProperties, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:OpticalPropertyView DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
+        </StackPanel>
+        <Grid Margin="0,3,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
             <!-- Model/Analysis Output -->
-            <v:RadioButtonOptionView Grid.Column="0" DataContext="{Binding ForwardAnalysisTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <v:RadioButtonOptionView Grid.Column="0" DataContext="{Binding ForwardAnalysisTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
             <!-- Button -->
             <Button 
                 Grid.Column="1"
