--- a/src/Vts.Gui.Silverlight/View/Application/Panels/InverseSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/InverseSolverView.xaml
@@ -7,38 +7,37 @@
         <!-- Solver Engines -->
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="72"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                       Text="{Binding Path=MainResource.Label_ForwardSolver, Source={StaticResource LocalizedStrings }}" 
-                       FontSize="12" FontWeight="Bold" Margin="3,3" VerticalAlignment="Center" />
-            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                       Text="{Binding Path=MainResource.Label_InverseSolver, Source={StaticResource LocalizedStrings }}" 
-                       FontSize="12" FontWeight="Bold" Margin="3,3" VerticalAlignment="Center" />
-            <v:ComboBoxOptionView Grid.Row="1" Grid.Column="1"
+            <TextBlock Grid.Column="0" Grid.Row="0"
+                Text="{Binding Path=MainResource.Label_ForwardSolver, Source={StaticResource LocalizedStrings }}" 
+                FontWeight="Bold" Width="75" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <v:ComboBoxOptionView Grid.Column="1" Grid.Row="0"
                 DataContext="{Binding MeasuredForwardSolverTypeOptionVM}" 
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3" />
-            <v:ComboBoxOptionView  Grid.Row="3" Grid.Column="1"
+                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3,0,0"/>
+            <TextBlock Grid.Column="0" Grid.Row="1"
+                Text="{Binding Path=MainResource.Label_InverseSolver, Source={StaticResource LocalizedStrings }}" 
+                FontWeight="Bold" Width="75" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <v:ComboBoxOptionView Grid.Column="1" Grid.Row="1"
                 DataContext="{Binding InverseForwardSolverTypeOptionVM}"
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3" />
+                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3,0,0"/>
         </Grid>
+        
         <!-- Solution Domain -->
-        <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3"/>
+        <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         <!-- Detection Parameters -->
-        <v:RangeView DataContext="{Binding RangeVM}" Margin="3,3"/>
+        <v:RangeView DataContext="{Binding RangeVM}" Margin="0,3,0,0"/>
         <!-- Optimization paramters -->
-        <v:RadioButtonOptionView DataContext="{Binding InverseFitTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3"/>
+        <v:RadioButtonOptionView DataContext="{Binding InverseFitTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         <!-- Optimizer Type -->
-        <v:RadioButtonOptionView DataContext="{Binding OptimizerTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,3"/>
+        <v:RadioButtonOptionView DataContext="{Binding OptimizerTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         <!-- Optical Properties -->
-        <Grid  Margin="3,3">
+        <Grid  Margin="3,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -54,7 +53,7 @@
             </StackPanel>
             <v:OpticalPropertyView Grid.Row="0" Grid.Column="1" DataContext="{Binding MeasuredOpticalPropertyVM}" />
             <StackPanel VerticalAlignment="Bottom" Grid.Row="1" Grid.Column="0">
-                <TextBlock HorizontalAlignment="Left">Initial Guess</TextBlock>
+                <TextBlock HorizontalAlignment="Left">Initial Guess:</TextBlock>
                 <TextBlock HorizontalAlignment="Left">Optical Properties:</TextBlock>
             </StackPanel>
             <v:OpticalPropertyView DataContext="{Binding InitialGuessOpticalPropertyVM}" Grid.Row="1" Grid.Column="1"/>
