--- a/src/Vts.Gui.Silverlight/View/Controls/PositionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Controls/PositionView.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Title}" 
                    Visibility="{Binding ShowTitle, Converter={StaticResource myBooleanToVisibilityConverter}}" 
-                   FontSize="16" Grid.Row="0"  TextDecorations="Underline" VerticalAlignment="Top"/>
+                   FontWeight="Bold" Grid.Row="0"  VerticalAlignment="Top"/>
         
         <StackPanel x:Name="LayoutRoot"  Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top">
             <StackPanel Orientation="Vertical" Margin="5,0,5,0" >
