--- a/src/Vts.Gui.Silverlight/View/Controls/RangeView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Controls/RangeView.xaml
@@ -13,10 +13,9 @@
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Title}" 
                    Visibility="{Binding ShowTitle, Converter={StaticResource myBooleanToVisibilityConverter}}" 
-                   FontSize="16" Grid.Row="0"  TextDecorations="Underline" VerticalAlignment="Top"/>
-        
-        <StackPanel x:Name="LayoutRoot"  Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top">
-            <StackPanel Orientation="Vertical" Margin="5,0,5,0" >
+                   FontWeight="Bold" Grid.Row="0" VerticalAlignment="Top"/>
+        <StackPanel x:Name="LayoutRoot"  Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top" Margin="3,0,0,0">
+            <StackPanel Orientation="Vertical" Margin="0,0,0,0" >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <TextBlock Text="Begin ["/>
                     <TextBlock Text="{Binding Units}" />
@@ -25,7 +24,7 @@
                 <TextBox Width="40" Text="{Binding Start, Mode=TwoWay}" HorizontalAlignment="Center"/>
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" Margin="5,0,5,0">
+            <StackPanel Orientation="Vertical" Margin="5,0,0,0">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <TextBlock Text="End ["/>
                     <TextBlock Text="{Binding Units}" />
@@ -34,7 +33,7 @@
                 <TextBox Width="40" Text="{Binding Stop, Mode=TwoWay}" HorizontalAlignment="Center"/>
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" Margin="5,0,5,0" HorizontalAlignment="Center" 
+            <StackPanel Orientation="Vertical" Margin="12,0,0,0" HorizontalAlignment="Center" 
                    Visibility="{Binding EnableNumber, Converter={StaticResource myBooleanToVisibilityConverter}}" >
                 <TextBlock Text="Number" TextAlignment="Center"/>
                 <TextBox Width="40" Text="{Binding Number, Mode=TwoWay}" HorizontalAlignment="Center"/>
