--- a/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
@@ -17,7 +17,7 @@
         <!-- Gaussian Beam Diameter -->
         <StackPanel Orientation="Horizontal" Visibility="{Binding IsGaussianForwardModel, Converter={StaticResource myBooleanToVisibilityConverter}}" Margin="0,3,0,0">
             <TextBlock Text="{Binding Path=MainResource.Label_GaussianBeam, Source={StaticResource LocalizedStrings}}" Margin="3,0,0,0" VerticalAlignment="Center"/>
-            <TextBox Width="40" Text="{Binding ForwardSolver.BeamDiameter, Mode=TwoWay}" VerticalAlignment="Bottom" Margin="3,0,0,0"/>
+            <TextBox Width="40" Text="{Binding ForwardSolver.BeamDiameter, Mode=TwoWay}" VerticalAlignment="Bottom" Margin="3,0,0,0" KeyDown="TextBox_KeyDown"/>
             <TextBlock Text="{Binding Path=MainResource.Measurement_mm, Source={StaticResource LocalizedStrings}}" Margin="2,0,0,0" VerticalAlignment="Center"/>
         </StackPanel>
         <!-- Solution Domain -->
