--- a/src/Vts.Gui.Silverlight/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/MonteCarloSolverView.xaml
@@ -42,7 +42,7 @@
             <TextBlock Text="Basic Info" FontWeight="Bold"/>
             <StackPanel Orientation="Horizontal" Margin="3,0,0,0">
                 <TextBlock Text="Number of Photons:" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding N, Mode=TwoWay}" Width="100" Margin="2,0,0,0"/>
+                <TextBox Text="{Binding N, Mode=TwoWay}" Width="100" Margin="2,0,0,0" KeyDown="TextBox_KeyDown"/>
             </StackPanel>
 
             <StackPanel Orientation="Vertical" DataContext="{Binding SimulationOptionsVM}">
@@ -53,7 +53,7 @@
                     <CheckBox IsChecked="{Binding TrackStatistics, Mode=TwoWay}" VerticalAlignment="Center"/>
                     <TextBlock Text="Track statistics" VerticalAlignment="Center" TextAlignment="Left" Margin="0,0,10,0"/>
                     <TextBlock Text="Seed:" VerticalAlignment="Center"/>
-                    <TextBox Text="{Binding Seed, Mode=TwoWay}" Width="60" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                    <TextBox Text="{Binding Seed, Mode=TwoWay}" Width="60" VerticalAlignment="Center" Margin="2,0,0,0" KeyDown="TextBox_KeyDown"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="3,0,0,0">
                     <TextBlock Text="Absorption Weighting Type:" VerticalAlignment="Center"/>
