--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SpectralMappingView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SpectralMappingView.xaml
@@ -49,7 +49,7 @@
                                     <TextBlock Text="{Binding ConcentrationUnits}"/>
                                     <TextBlock Text="]: "/>
                                 </StackPanel>
-                                <TextBox Text="{Binding Concentration, Mode=TwoWay, Converter={StaticResource myDoubleToStringConverter}, ConverterParameter=N3}" Width="50"  Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                                <TextBox Text="{Binding Concentration, Mode=TwoWay, Converter={StaticResource myDoubleToStringConverter}, ConverterParameter=N3}" Width="50"  Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" VerticalContentAlignment="Center" KeyDown="TextBox_KeyDown"/>
                             </Grid>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -70,7 +70,7 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{Binding Path=MainResource.Value_VolumeFraction, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" /><TextBlock Text=" = " VerticalAlignment="Center" />
-                                    <TextBox Text="{Binding Scatterer.VolumeFraction, Mode=TwoWay}" Width="40"/>
+                                    <TextBox Text="{Binding Scatterer.VolumeFraction, Mode=TwoWay}" Width="40" KeyDown="TextBox_KeyDown"/>
                                 </StackPanel>
                             </DataTemplate>
                         </v:ScatteringTemplateSelector.IntralipidScatteringTemplate>
@@ -80,13 +80,13 @@
                                 <StackPanel Orientation="Horizontal" Margin="3,0,0,0">
                                     <TextBlock Text="{Binding Path=MainResource.Value_ParticleRadius, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                     <TextBlock Text="=" VerticalAlignment="Center" Margin="2,0,2,0"/>
-                                    <TextBox Text="{Binding Scatterer.ParticleRadius, Mode=TwoWay}" Width="40" Margin="0,0,5,0"/>
+                                    <TextBox Text="{Binding Scatterer.ParticleRadius, Mode=TwoWay}" Width="40" Margin="0,0,5,0" KeyDown="TextBox_KeyDown"/>
                                     <TextBlock Text="{Binding Path=MainResource.Value_ParticleN, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                     <TextBlock Text="=" VerticalAlignment="Center" Margin="2,0,2,0"/>
-                                    <TextBox Text="{Binding Scatterer.ParticleRefractiveIndexMismatch, Mode=TwoWay}" Width="40" Margin="0,0,5,0"/>
+                                    <TextBox Text="{Binding Scatterer.ParticleRefractiveIndexMismatch, Mode=TwoWay}" Width="40" Margin="0,0,5,0" KeyDown="TextBox_KeyDown"/>
                                     <TextBlock Text="{Binding Path=MainResource.Value_MediumN, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                     <TextBlock Text="=" VerticalAlignment="Center" Margin="2,0,2,0"/>
-                                    <TextBox Text="{Binding Scatterer.MediumRefractiveIndexMismatch, Mode=TwoWay}" Width="40"/>
+                                    <TextBox Text="{Binding Scatterer.MediumRefractiveIndexMismatch, Mode=TwoWay}" Width="40" KeyDown="TextBox_KeyDown"/>
                                 </StackPanel>
                             </DataTemplate>
                         </v:ScatteringTemplateSelector.MieScatteringTemplate>
@@ -97,10 +97,10 @@
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="{Binding Path=MainResource.Value_A, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                         <TextBlock Text="=" VerticalAlignment="Center" Margin="2,0,2,0"/>
-                                        <TextBox Text="{Binding Scatterer.A, Mode=TwoWay}" Width="Auto" Margin="0,0,5,0"/>
+                                        <TextBox Text="{Binding Scatterer.A, Mode=TwoWay}" Width="Auto" Margin="0,0,5,0" KeyDown="TextBox_KeyDown"/>
                                         <TextBlock Text="{Binding Path=MainResource.Value_b, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                         <TextBlock Text="=" VerticalAlignment="Center" Margin="2,0,2,0"/>
-                                        <TextBox Text="{Binding Scatterer.B, Mode=TwoWay}" Width="Auto" Margin="0,0,5,0"/>
+                                        <TextBox Text="{Binding Scatterer.B, Mode=TwoWay}" Width="Auto" Margin="0,0,5,0" KeyDown="TextBox_KeyDown"/>
                                         <TextBlock Text="{Binding Path=MainResource.Label_PowerLawDefinitionA, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                                     </StackPanel>
                                 </StackPanel>
@@ -116,7 +116,8 @@
                     <StackPanel Orientation="Horizontal" Margin="3,0,0,0" VerticalAlignment="Bottom">
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Center">
                             <TextBlock Text="At λ [nm] = " VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                            <TextBox Text="{Binding Wavelength, Mode=TwoWay, NotifyOnValidationError=True}" VerticalContentAlignment="Bottom" Width="40"/>
+                            <TextBox Text="{Binding Wavelength, Mode=TwoWay, NotifyOnValidationError=True}" 
+                                     VerticalContentAlignment="Bottom" Width="40" KeyDown="TextBox_KeyDown"/>
                         </StackPanel>
                         <Button input:CommandService.Command="UpdateOpticalProperties"
                                 input:CommandService.CommandParameter="{Binding}"
