--- a/src/Vts.Gui.Silverlight/View/Controls/RangeView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Controls/RangeView.xaml
@@ -1,7 +1,6 @@
 ﻿<UserControl x:Class="Vts.Gui.Silverlight.View.RangeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:v="clr-namespace:Vts.Gui.Silverlight.View"
     xmlns:vm="clr-namespace:Vts.Gui.Silverlight.ViewModel" >
     <UserControl.DataContext>
         <vm:RangeViewModel/>
@@ -21,26 +20,21 @@
                     <TextBlock Text="{Binding Units}" />
                     <TextBlock Text="]"/>
                 </StackPanel>
-                <TextBox Width="40" Text="{Binding Start, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                <TextBox Width="40" Text="{Binding Start, Mode=TwoWay}" HorizontalAlignment="Center" KeyDown="TextBox_KeyDown"/>
             </StackPanel>
-
             <StackPanel Orientation="Vertical" Margin="5,0,0,0">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <TextBlock Text="End ["/>
                     <TextBlock Text="{Binding Units}" />
                     <TextBlock Text="]"/>
                 </StackPanel>
-                <TextBox Width="40" Text="{Binding Stop, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                <TextBox Width="40" Text="{Binding Stop, Mode=TwoWay}" HorizontalAlignment="Center" KeyDown="TextBox_KeyDown"/>
             </StackPanel>
-
             <StackPanel Orientation="Vertical" Margin="12,0,0,0" HorizontalAlignment="Center" 
                    Visibility="{Binding EnableNumber, Converter={StaticResource myBooleanToVisibilityConverter}}" >
                 <TextBlock Text="Number" TextAlignment="Center"/>
-                <TextBox Width="40" Text="{Binding Number, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                <TextBox Width="40" Text="{Binding Number, Mode=TwoWay}" HorizontalAlignment="Center" KeyDown="TextBox_KeyDown"/>
             </StackPanel>
-
-            <!--<v:RadioButtonOptionView x:Name="myRangeSpacingOptionView" DataContext="{Binding RangeSpacingOptionVM}" VerticalAlignment="Center" Width="100"/>-->
-
         </StackPanel>
     </Grid>
 
