Removed/replaced extraneous commands. Now, commands in Commands.cs only specify commands that communicate between ViewModels. Todo: if we want, we can replace the rest with the weak-reference-based Mediator in MVVMLight, and remove dependence on SLExtensions.dll
--HG--
branch : c-131208-spectral_fs_gui_changes

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/FluenceSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/FluenceSolverView.xaml
@@ -71,8 +71,7 @@
             <Button 
                 VerticalAlignment="Bottom"
                 HorizontalAlignment="Right"
-                input:CommandService.Command="FluenceSolver_ExecuteFluenceSolver"
-                input:CommandService.CommandParameter="{Binding}"
+                Command="{Binding ExecuteFluenceSolverCommand}"
                 Content="{Binding Path=MainResource.Button_GenerateFluence, Source={StaticResource LocalizedStrings}}"  
                 Height="30" Margin="5"/>
         </StackPanel>
