--- a/src/Vts.Gui.Silverlight/View/Application/Panels/MeshView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/MeshView.xaml
@@ -86,9 +86,8 @@
                 <!-- Color map dropdown -->
                 <v:ComboBoxOptionView DataContext="{Binding ColormapTypeOptionVM}" Margin="5,0,5,0"/>
                 <!-- Export buttons -->
-                <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" Click="Button_Click" Margin="5,0,5,0"/>
-                <Button input:CommandService.Command="Maps_ExportDataToText"
-                        input:CommandService.CommandParameter="{Binding}"
+                <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" Click="ExportImage_Click" Margin="5,0,5,0"/>
+                <Button Command="{Binding ExportDataCommand}"
                         Content="{Binding Path=MainResource.Button_ExportData, Source={StaticResource LocalizedStrings}}" Margin="5,0,5,0"/>
             </StackPanel>
         </Grid>
